update:update documentation use scramble
